--- a/FellowshipLib/FellowshipLib.csproj
+++ b/FellowshipLib/FellowshipLib.csproj
@@ -63,24 +63,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddressLookupByPerson.cs" />
-    <Compile Include="AddressLookupByPersonTests.cs" />
+    <Compile Include="APIRequests\Get\AddressLookupByPerson.cs" />
+    <Compile Include="APIRequests\Get\GetRequest.cs" />
+    <Compile Include="APIRequests\Get\HouseholdLookup.cs" />
+    <Compile Include="APIRequests\Get\PersonLookup.cs" />
+    <Compile Include="APIRequests\Get\PersonSearch.cs" />
     <Compile Include="DataTransferClasses\Address.cs" />
     <Compile Include="DataTransferClasses\Addresses.cs" />
     <Compile Include="DataTransferClasses\Occupation.cs" />
     <Compile Include="DataTransferClasses\Person.cs" />
     <Compile Include="Extensions\HttpStatusCodeExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="HouseholdLookup.cs" />
-    <Compile Include="HouseholdLookupTests.cs" />
-    <Compile Include="PersonLookup.cs" />
-    <Compile Include="PersonLookupTests.cs" />
-    <Compile Include="PersonSearch.cs" />
-    <Compile Include="PersonSearchTests.cs" />
-    <Compile Include="SafeTrimTests.cs" />
     <Compile Include="FellowshipAPI.cs" />
-    <Compile Include="GetRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\AddressLookupByPersonTests.cs" />
+    <Compile Include="Tests\HouseholdLookupTests.cs" />
+    <Compile Include="Tests\PersonLookupTests.cs" />
+    <Compile Include="Tests\PersonSearchTests.cs" />
+    <Compile Include="Tests\SafeTrimTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
