added PersonLookup for finding a person by id

--- a/FellowshipLib/FellowshipLib.csproj
+++ b/FellowshipLib/FellowshipLib.csproj
@@ -64,6 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Occupation.cs" />
+    <Compile Include="PersonLookup.cs" />
+    <Compile Include="PersonLookupTests.cs" />
     <Compile Include="PersonSearch.cs" />
     <Compile Include="PersonSearchTests.cs" />
     <Compile Include="SafeTrimTests.cs" />
