--- a/FellowshipWeb/FellowshipWeb.csproj
+++ b/FellowshipWeb/FellowshipWeb.csproj
@@ -126,6 +126,12 @@
   <ItemGroup>
     <Content Include="Views\People\Details.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\People\NoPeopleFound.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\People\SearchResults.cshtml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
