--- a/FellowshipWeb/FellowshipWeb.csproj
+++ b/FellowshipWeb/FellowshipWeb.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Scripts\styling.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -135,6 +136,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Household\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\PeopleListing.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\People\Addresses.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
