refactored status codes check

--- a/FellowshipLib/FellowshipLib.csproj
+++ b/FellowshipLib/FellowshipLib.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Addresses.cs" />
     <Compile Include="AddressLookup.cs" />
     <Compile Include="AddressLookupByPersonTests.cs" />
+    <Compile Include="Extensions\HttpStatusCodeExtensions.cs" />
     <Compile Include="HouseholdLookup.cs" />
     <Compile Include="HouseholdLookupTests.cs" />
     <Compile Include="Occupation.cs" />
@@ -84,6 +85,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
