--- a/FellowshipLib/FellowshipLib.csproj
+++ b/FellowshipLib/FellowshipLib.csproj
@@ -68,6 +68,7 @@
     <Compile Include="AddressLookup.cs" />
     <Compile Include="AddressLookupByPersonTests.cs" />
     <Compile Include="Extensions\HttpStatusCodeExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="HouseholdLookup.cs" />
     <Compile Include="HouseholdLookupTests.cs" />
     <Compile Include="Occupation.cs" />
@@ -76,7 +77,6 @@
     <Compile Include="PersonSearch.cs" />
     <Compile Include="PersonSearchTests.cs" />
     <Compile Include="SafeTrimTests.cs" />
-    <Compile Include="StringExtensions.cs" />
     <Compile Include="FellowshipAPI.cs" />
     <Compile Include="GetRequest.cs" />
     <Compile Include="Person.cs" />
